# under_attack_orchestrator

./: .gitignore  CLAUDE.md  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  package-release.ps1  package_release.ps1  releases.json  resources.qrc
resources/: android_default.json  apps_default.json  media_files.json  qt_apps.json  rundown.json  stage.json
src/: AdbManager.cpp  AdbManager.h  AndroidConfig.cpp  AndroidConfig.h  AndroidManager.cpp  AndroidManager.h  AppConfig.cpp  AppConfig.h  AppManager.cpp  AppManager.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  MediaConfig.cpp  MediaConfig.h  MediaManager.cpp  MediaManager.h  StageWindow.cpp  StageWindow.h  WorkspacePaths.h  main.cpp
src/ui/: ConfigureModeScreen.cpp  ConfigureModeScreen.h  CyberBackgroundWidget.cpp  CyberBackgroundWidget.h  CyberPanel.cpp  CyberPanel.h  CyberTheme.h  ModeSelectorScreen.cpp  RehearsalModeScreen.cpp  RehearsalModeScreen.h  ShowModeScreen.cpp  ShowModeScreen.h
ui/: ConfigureModeScreen.cpp  CyberTheme.cpp  ModeSelectorScreen.cpp  ModeSelectorScreen.h
